--- a/02ordemDecrescente.html
+++ b/02ordemDecrescente.html
@@ -17,9 +17,9 @@
     } else if (segNumero >= primNumero && segNumero >= tercNumero && (primNumero >= tercNumero)) {
         alert(`A ordem decrescente é: ${segNumero}, ${primNumero}, ${tercNumero}.`);
     } else if (primNumero >= segNumero && primNumero >= tercNumero && (tercNumero >= segNumero)) {
-        alert(`A ordem decrescente: ${primNumero}, ${tercNumero}, ${segNumero}.`);
+        alert(`A ordem decrescente é: ${primNumero}, ${tercNumero}, ${segNumero}.`);
     } else if (tercNumero >= primNumero && tercNumero >= segNumero && (segNumero >= primNumero)) {
-        alert(`A ordem decrescente: ${tercNumero}, ${segNumero}, ${primNumero}.`);
+        alert(`A ordem decrescente é: ${tercNumero}, ${segNumero}, ${primNumero}.`);
     } else {
         alert(`A ordem decrescente é: ${tercNumero}, ${primNumero}, ${segNumero}.`);
     }
