--- a/08testaLados.html
+++ b/08testaLados.html
@@ -10,12 +10,15 @@
     const lado3 = Number(prompt(`Informe o valor do terceiro lado do triângulo:`));
     
     //PROCESSAMENTO E SAÍDA
-    if(lado1 == lado2 || lado1 == lado3 || lado2 == lado3 || lado2 == lado3) {
-        alert(`Isósceles.`);
-    } else if(lado1 !== lado2 && lado1 !== lado3 && lado2 !== lado3) {
-        alert(`Escaleno.`);
+    if (lado1 < lado2 + lado3 && lado2 < lado1 + lado3 && lado3 < lado1 + lado2) {
+        if (lado1 == lado2 && lado2 == lado3) {
+            alert(`Os lados formam um triângulo equilátero.`);
+        } else if (lado1 == lado2 || lado1 == lado3 || lado2 == lado3) {
+            alert(`Os lados formam um triângulo isósceles.`);
+        } else {
+         alert(`Os lados formam um triângulo escaleno.`) 
+        } 
     } else {
-        alert(`Equilátero.`)
-    }
-
+        alert(`Os lados não formam um triângulo.`)
+    } 
 </script>
