--- a/09.operacaoMatematica.html
+++ b/09.operacaoMatematica.html
@@ -8,7 +8,9 @@
     */
 
     //ENTRADA
-
+    const primeiroNumero = Number(prompt(`Informe o primeiro número:`));
+    const segundoNumero = Number(prompt(`Informe o segundo número:`));
+    const operacaoDesejada = Number(prompt(`Informe a operação desejada (Responda "+" para adição, "-" para subtração, "*" para multiplicação e "/" para divisão):`));
 
     //PROCESSAMENTO
 
