--- a/09.operacaoMatematica.html
+++ b/09.operacaoMatematica.html
@@ -12,18 +12,31 @@
     const segundoNumero = Number(prompt(`Informe o segundo número:`));
     const operacaoDesejada = Number(prompt(`Informe a operação desejada (Responda "+" para adição, "-" para subtração, "*" para multiplicação e "/" para divisão):`));
 
-    //PROCESSAMENTO
+    //PROCESSAMENTO CAlCULO
+    let adicao = primeiroNumero + segundoNumero;
+    let subtracao = primeiroNumero - segundoNumero;
+    let multiplicacao = primeiroNumero * segundoNumero;
+    let divisao = primeiroNumero / segundoNumero;
+
+    // PROCESSAMENTO IF ELSE
     if (operacaoDesejada == "+") {
-        resultado = primeiroNumero + segundoNumero;
+        alert(`${adicao}`);
     } else if (operacaoDesejada == "-") {
-        resultado = primeiroNumero - segundoNumero;
+        alert(`${subtracao}`);
     } else if (operacaoDesejada == "*") {
-        resultado = primeiroNumero * segundoNumero;
+        alert(`${multiplicacao}`);
     } else if (operacaoDesejada == "/") {
-        resultado = primeiroNumero / segundoNumero;
+        alert(`${divisao}`);
     } else {
         alert(`Operação Inválida.`);
     }
+
+    if(resultado % 2 == 0){
+        alert(`Seu número é par.`);
+    } else {
+        alert(`Seu número é ímpar.`);
+    }
+    if(resultado > 0)
     //SAÍDA
 
 </script>
