--- a/13notaParaConceito.html
+++ b/13notaParaConceito.html
@@ -12,10 +12,22 @@
     */
 
     //ENTRADA
-
+    const nota = Number(prompt(`Informe a nota:`));
     
     //PROCESSAMENTO
-
+    if(nota >= 9 && nota <= 10){
+        alert(`Conceito A.`);
+    } else if(nota >= 8 && nota <= 8.9){
+        alert(`Conceito B.`);
+    } else if(nota >= 7 && nota <= 7.9){
+        alert(`Conceito C.`);
+    } else if(nota >= 6 && nota <= 6.9){
+        alert(`Conceito D.`);
+    } else if(`nota >= 0 && nota <= 5.9`){
+        alert(`Conceito E.`);
+    } else {
+        alert(`Erro!`)
+    }
     
     //SAÍDA
 
