--- a/11.descontoCombustivel.html
+++ b/11.descontoCombustivel.html
@@ -27,7 +27,7 @@
     let resultado1G = gasolina - ((gasolina * 4) / 100);
     let resultado2G = gasolina - ((gasolina * 6) / 100);
 
-    // SAIDA
+    // PROCESSAMENTO E SAIDA IF ELSE
     if(litrosVendidos <= 20 && tipoCombustivel == "A") {
         alert(`Você pagará R$${resultado1A} pelo alcool.`);
     } else if(litrosVendidos > 20 && tipoCombustivel == "A") {
