--- a/15numeroInteiroDecimal.html
+++ b/15numeroInteiroDecimal.html
@@ -14,6 +14,6 @@
     if(resultado % 1 == 0) {
         alert(`Inteiro.`);
     } else {
-        alert(`Decimal.`)
+        alert(`Decimal.`);
     }
 </script>
