--- a/17aumentoPreco.html
+++ b/17aumentoPreco.html
@@ -10,7 +10,7 @@
     */
 
     //ENTRADA
-    const precoProduto = Number(prompt(`Informe o preço do produto:`));
+    const precoProduto = Number(prompt(`Informe o preço do produto:`).replace(",", "."));
     
     //PROCESSAMENTO E SAÍDA
     let resultado;
@@ -19,10 +19,10 @@
     } else if (precoProduto > 280 && precoProduto <= 700) {
         resultado = precoProduto * 1.15;
     } else if (precoProduto > 700 && precoProduto <= 1500) {
-        resultado = precoProduto * 1,10;
+        resultado = precoProduto * 1.10;
     } else {
         resultado = precoProduto * 1.05;
     }
-    document.write(`O aumento foi de: R$${resultado}.`);
+    document.write(`O novo preço do produto é: R$${resultado.toFixed(2).replace(".", ",")}.`);
 
 </script>
