--- a/11.descontoCombustivel.html
+++ b/11.descontoCombustivel.html
@@ -19,9 +19,9 @@
 
     // PROCESSAMENTO E SAIDA IF ELSE
     let resultado;
-    if(litrosVendidos <= 20 && tipoCombustivel == "A") {
+    if (litrosVendidos <= 20 && tipoCombustivel == "A") {
         resultado = Math.floor((litrosVendidos * 6.10) * 0.97);
-    } else if(litrosVendidos > 20 && tipoCombustivel == "A") {
+    } else if (litrosVendidos > 20 && tipoCombustivel == "A") {
         resultado = Math.floor((litrosVendidos * 6.10) * 0.95);
     } else if (litrosVendidos <= 20 && tipoCombustivel == "G") {
         resultado = Math.floor((litrosVendidos * 6.50) * 0.96);
@@ -29,4 +29,6 @@
         resultado = Math.floor((litrosVendidos * 6.50) * 0.94);
     }
     document.write(`Você pagará R$${resultado}.`)
+
+    // ver dnv
 </script>
