--- a/15numeroInteiroDecimal.html
+++ b/15numeroInteiroDecimal.html
@@ -6,7 +6,7 @@
     */
 
     //ENTRADA
-    const numero = Number(prompt(`Informe um número:`));
+    const numero = Number(prompt(`Informe um número:`).replace(",", "."));
 
     //PROCESSAMENTO E SAÍDA
     /* resultado % 1 == 0 */
@@ -16,4 +16,6 @@
     } else {
         alert(`Decimal.`);
     }
+
+    // ver dnv
 </script>
