--- a/15numeroInteiroDecimal.html
+++ b/15numeroInteiroDecimal.html
@@ -10,12 +10,11 @@
 
     //PROCESSAMENTO E SAÍDA
     /* resultado % 1 == 0 */
-    let resultado = Math.round(numero);
-    if(resultado % 1 == 0) {
+    if(numero % 1 == 0) {
         alert(`Inteiro.`);
     } else {
         alert(`Decimal.`);
     }
 
-    // ver dnv
+    // ok
 </script>
