--- a/18estacaoAno.html
+++ b/18estacaoAno.html
@@ -12,7 +12,7 @@
     //PROCESSAMENTO E SAÍDA
     let estacao = "";
     if (hemisferio == "Norte") {
-        if(mesAtual >= 3 && mesAtual <= 5){
+        if (mesAtual >= 3 && mesAtual <= 5){
             estacao = "Primevera";
         } else if (mesAtual >= 6 && mesAtual <= 8) {
             estacao = "Verão";
@@ -32,7 +32,7 @@
             estacao = "Verão";
         }
     }
-    document.write(`A estação atual é ${estacao}.`);
+    document.write(`No hemisfério ${hemisferio} a estação atual é ${estacao}.`);
 
     // ok
 </script>
