--- a/07.caixaEletronico.html
+++ b/07.caixaEletronico.html
@@ -28,5 +28,5 @@
     }
     document.write(`A quantidade de notas de 100 será de ${notas100} notas, a quantidade de notas de 50 será de ${notas50} notas, a quantidade de notas de 10 será de ${notas10}, a quantidade de notas de 5 será de ${notas5} e a quantidade de notas de 1 será de ${notas1} notas.`);
 
-    // ok
+    // okk
 </script>
